tests/cmp/dc-label-wrong-order.golden
Parse Error:
tests/cmp/dc-label-wrong-order.trp:1:27: parse error
  (while parsing DC label)
  1 | let val x = 60 raisedTo `<#root-integrity; #null-confidentiality>`
    |                           ^
  unexpected '#root-integrity'
  expected ';'

Suggestion: In DC labels, use ';' to separate confidentiality and integrity.
  Syntax: `< confidentiality ; integrity >`
  Example: `< alice ; bob >`

